# control-pcgrl

./: .envrc  .gitignore  .gitmodules  Taskfile.yml  evo_batch.py  flake.nix  gen_trajectories.py  pyproject.toml  rllib_inference.py  run_batch_evo.py  run_batch_rl.py  setup.py  space_fill.py  test3D.py  test_pathfinding.py  test_render.py  tex_formatting.py  train_imitation.py  train_reward_model.py
control_pcgrl/: README.md  __init__.py  control_wrappers.py  gtk_gui.py  reward_model_wrappers.py  task_assignment.py  wrappers.py
control_pcgrl/configs/: config.py  train.yaml
control_pcgrl/envs/: __init__.py  gui.py  helper.py  helper_3D.py  pcgrl_ctrl_env.py  pcgrl_env.py  pcgrl_env_3D.py  pcgrl_holey_env.py  pcgrl_holey_env_3D.py  play_pcgrl_env.py
control_pcgrl/envs/probs/: __init__.py  face_prob.py  holey_prob.py  holey_prob_3D.py  lego_problem.py  loderunner_ctrl_prob.py  loderunner_prob.py  problem.py
control_pcgrl/envs/probs/binary/: binary_holey_prob.py  binary_prob.py  eval_maps.py  test_paths.py
control_pcgrl/envs/probs/ddave/: ddave_prob.py
control_pcgrl/envs/probs/ddave/ddave/: __init__.py
control_pcgrl/envs/probs/loderunner/: __init__.py
control_pcgrl/envs/probs/mdungeon/: mdungeon_prob.py
control_pcgrl/envs/probs/mdungeon/mdungeon/: __init__.py
control_pcgrl/envs/probs/microstructure/: microstructure_prob.py
control_pcgrl/envs/probs/minecraft/: gl_render.py  mc_render.py  minecraft_2D_maze_prob.py  minecraft_3D_Parkour_ctrl_prob.py  minecraft_3D_Parkour_prob.py  minecraft_3D_dungeon_prob.py  minecraft_3D_holey_dungeon_prob.py  minecraft_3D_holey_maze_prob.py  minecraft_3D_maze_prob.py  minecraft_3D_rain.py  minecraft_pb2.py  test_paths.py  utils.py
control_pcgrl/envs/probs/minecraft/minecraft/: __init__.py
control_pcgrl/envs/probs/smb/: smb_ctrl_prob.py  smb_prob.py
control_pcgrl/envs/probs/smb/smb/: __init__.py
control_pcgrl/envs/probs/sokoban/: sokoban_ctrl_prob.py  sokoban_prob.py
control_pcgrl/envs/probs/sokoban/sokoban/: __init__.py
control_pcgrl/envs/probs/zelda/: minizelda_prob.py  zelda_ctrl_prob.py  zelda_play_prob.py  zelda_prob.py
control_pcgrl/envs/reps/: ca_rep.py  narrow_cast_rep.py  narrow_multi_rep.py  narrow_rep.py  representation.py  turtle_cast_rep.py  turtle_rep.py  wide_rep.py  wrappers.py
control_pcgrl/evo/: archives.py  args.py  cross_eval.py  evolve.py  models.py  optimizer.py  render_gifs.py  utils.py
control_pcgrl/hw-mods/: utils.py
control_pcgrl/hw_mods/: utils.py
control_pcgrl/il/: utils.py  wrappers.py
control_pcgrl/rl/: Dockerfile  args.py  callbacks.py  cross_eval.py  cross_eval_old.py  enjoy.py  envs.py  eval.py  evalscript.py  evaluate.py  evaluate_ctrl.py  infer.py  infer_ctrl.py  inference.py  lala.py  models.py  rllib_utils.py  train.py  utils.py
hydra_plugins/hydra_drill_launcher/: config.py  cross_eval_launcher_submitit.py  drill_launcher.py
tests/: test_multiagent_representations.py
