[tool.poetry]
name = "control-pcgrl"
version = "0.1.0"
description = "Train or evolve controllable and diverse level-generators. Origin: https://github.com/smearle/control-pcgrl"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
chardet = "5.1.0"
dm-tree = "0.1.8"
einops = "0.6.0"
lz4 = "4.3.2"
neat-python = "0.92"
deap = "1.3.3"
graphviz = "0.20.1"
gym = "0.26.2"
gymnasium = "0.27.1"
hydra-core = "1.3.2"
hydra-submitit-launcher = "1.2.0"
imageio = "2.26.0"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
