[tool.poetry]
name = "control-pcgrl"
version = "0.1.0"
description = "Train or evolve controllable and diverse level-generators. Origin: https://github.com/smearle/control-pcgrl"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
chardet = ">=5.1.0"
dm-tree = ">=0.1.8"
einops = ">=0.6.0"
lz4 = ">=4.3.2"
neat-python = ">=0.92"
deap = ">=1.3.3"
graphviz = ">=0.20.1"
gym = ">=0.26.2"
gymnasium = ">=0.27.1"
hydra-core = ">=1.3.2"
hydra-submitit-launcher = ">=1.2.0"
imageio = ">=2.26.0"
numpy = ">=1.23.5"
numba = ">=0.56.4"
opencv-python = ">=4.7.0.72"
pandas = ">=0.23.0"
pingouin = ">=0.5.3"
psutil = ">=5.7.0"
pygame = ">=2.1.3.dev8"
pyglet = ">=2.0.5"
pyopengl = ">=3.1.6"
pyscreenshot = ">=3.1"
pyyaml = ">=3.13"
ray = ">=2.3.0"
ribs = ">=0.5.1"
scikit-image = ">=0.20.0"
scikit-learn = ">=0.0"
seaborn = ">=0.12.2"
submitit = ">=1.4.5"
tensorboard = ">=2.12.0"
tensorboardx = ">=2.6"
torch = ">=2.0.0"
torchinfo = ">=1.7.2"
tqdm = ">=4.65.0"
wandb = ">=0.14.0"
matplotlib = ">=3.0.0"
typing-extensions = ">=3.6.6"
pytest = ">=7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
