[tool.poetry]
name = "control-pcgrl"
version = "0.1.0"
description = "Train or evolve controllable and diverse level-generators. Origin: https://github.com/smearle/control-pcgrl"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
chardet = ">=5.1.0"
dm-tree = ">=0.1.8"
einops = ">=0.6.0"
lz4 = ">=4.3.2"
# neat-python = ">=0.92"
deap = ">=1.3.3"
graphviz = ">=0.20.1"
gym = { version = ">=0.26", extras = [
    "atari",
    # "box2d",
    "classic-control",
] } # ">=0.10.8"
gymnasium = ">=0.27.1"
hydra-core = ">=1.3.2"
hydra-submitit-launcher = ">=1.2.0"
imageio = ">=2.26.0"
numpy = ">=1.23.5"
numba = ">=0.56.4"
opencv-python = ">=4.7.0.72"
pandas = ">=0.23.0"
pingouin = ">=0.5.3"
psutil = ">=5.7.0"
pygame = "2.*"
pyglet = ">=2.0.5"
pyopengl = ">=3.1.6"
pyscreenshot = ">=3.1"
pyyaml = ">=3.13"
ray = ">=2.3.0"
ribs = ">=0.5.1"
scikit-image = ">=0.20.0"
scikit-learn = ">=0.0"
seaborn = ">=0.8.1"
submitit = ">=1.4.5"
tensorboard = ">=2.12.0"
tensorboardx = ">=2.6"
torch = "^2.1.0+cu120"
torchinfo = ">=1.7.2"
tqdm = ">=4.65.0"
wandb = ">=0.14.0"
matplotlib = ">=3.0.0"
typing-extensions = ">=3.6.6"
pytest = ">=7.4.3"
cloudpickle = "1.2.1"
ipython = "^8.17.2"
joblib = "^1.3.2"
setuptools = "^68.2.2"
treelib = "^1.7.0"
gizeh = "^0.1.11"
tensorflow = "=2.13.0"
pyrsistent = "^0.20.0"
# pytorch-neat = { path = "/home/heinwol/Documents/temp/pytorch-neat" }
pytorch-neat = { url = "https://github.com/heinwol/PyTorch-NEAT/releases/download/release1/pytorch_neat-0.1.0-py3-none-any.whl" }
# tensorflow-io-gcs-filesystem = { version = "^0.34.0", extras = [
#     # "tensorflow-cpu",
#     # "tensorflow-gpu",
# ] }
hydra-colorlog = "^1.2.0"
cuda-python = "^12.3.0"

[tool.poetry.group.control_pcgrl.dependencies]
pygobject = "^3.46.0"
stable-baselines = "^2.10.2"


[tool.poetry.group.qdpy.dependencies]
scoop = "^0.7.2.0"
pybrain = "^0.3"


[tool.poetry.group.dev.dependencies]
pylance = "^0.8.16"
pyarrow = "13.*"

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
allow_redefinition = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
